--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,15 @@
 Name                  Score*
 
-uhals                  2*
-kuy                  31*
-Fuck you                  116*
+kuku,122
+kiki,222
+koko,407
+booyah,741
+pink,1000f
+pink,30
+aajga,458
+mamami,134
+huhu,172
+peemawin,390
+peemawin2,818
+peemawin3,174
+afmanlg,64
